replaced custom JCL with official xeustechnologies JCL, replaced the implementation of Batik for icons, added auto-detect extension descriptor from Jar file using META-INF/extension.yaml